Depuracion de error

--- a/darks.html
+++ b/darks.html
@@ -120,7 +120,7 @@
             <!--Seccion del menu junto con el logo-->
             <p class="logo">Dark Souls</p>
             <nav>
-                <a href="#somos-proya">Que es Dark Souls?</a>
+                <a href="#somos-proya2">Que es Dark Souls?</a>
                 <a href="#caracteristicas">Características</a>
                 <a href="Inicio.html">Regresar</a>
             </nav>
