--- a/sekiro.html
+++ b/sekiro.html
@@ -120,7 +120,7 @@
         <div class="container">
             <p class="logo">Sekiro: Shadows Die Twice</p>
             <nav>
-                <a href="#somos-proya">Que es Sekiro?</a>
+                <a href="#somos-proya4">Que es Sekiro?</a>
                 <a href="#caracteristicas">Características</a>
                 <a href="Inicio.html">Regresar</a>
             </nav>
