--- a/bloodborne.html
+++ b/bloodborne.html
@@ -120,7 +120,7 @@
         <div class="container">
             <p class="logo">Bloodborne</p>
             <nav>
-                <a href="#somos-proya">Que es Bloodborne?</a>
+                <a href="#somos-proya3">Que es Bloodborne?</a>
                 <a href="#caracteristicas">Características</a>
                 <a href="Inicio.html">Regresar</a>
             </nav>
